<resources>
    <string name="app_name">Cooking Conversion</string>
    <string name="cups">Cups</string>
    <string name="quart">Quarts</string>
    <string name="liter">Liters</string>
    <string name="tsp">TSP</string>
    <string name="tbs">TBS</string>
    <string name="Banner">Quickly Convert Measurements!</string>
    <string name="ButCon">Convert</string>
    <string name="ButCle">Clear</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>